--- a/infinite/pubspec.yaml
+++ b/infinite/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
   email_validator: ^3.0.0
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.4.1
   shared_preferences: ^2.3.2
+  sqflite: ^2.3.3+2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
